--- a/requirements.txt
+++ b/requirements.txt
@@ -15,19 +15,21 @@ django-js-asset==2.0.0
 django-mptt==0.14.0
 django-summernote==0.8.20.0
 djangorestframework==3.14.0
+djangorestframework-simplejwt==5.2.2
 face-recognition-models==0.3.0
 filelock==3.11.0
 idna==3.4
 Markdown==3.4.3
 mypy-extensions==1.0.0
-mysqlclient==2.1.1
 packaging==23.0
 pathspec==0.11.0
 Pillow==9.3.0
 platformdirs==3.1.1
+PyJWT==2.6.0
 python-dotenv==1.0.0
 pytz==2023.3
 requests==2.28.2
+rest-framework-simplejwt==0.0.2
 six==1.16.0
 sqlparse==0.4.3
 tomli==2.0.1
